# GamePadTest

./: .gitignore  LICENSE  README.md  WS-PROTOCOL.md  controller.js  index.html
.github/workflows/: build-client.yml  docker-web.yml
gamepad-tests-client/: CMakeLists.txt  README.md
gamepad-tests-client/resources/: app.manifest  version.rc
gamepad-tests-client/src/: main.cpp
gamepad-tests-client/src/core/: DataParser.h  GamepadDatabase.h
gamepad-tests-client/src/network/: DataTypes.h  WebSocketServer.cpp  WebSocketServer.h
gamepad-tests-client/src/platform/: HIDDevice.h  WindowsHIDDevice.cpp  WindowsHIDDevice.h
gamepad-tests-client/src/ui/: ConsoleUI.h  GaugeWindow.cpp  GaugeWindow.h
gamepad-tests-client/src/utils/: AdaptiveTimer.h  Config.h  HidHideIntegration.cpp  HidHideIntegration.h  Logger.h  ThreadSafeData.h  Timestamp.h
gamepad-tests-pro/: .dockerignore  Dockerfile  LICENSE  README.md  docker-部署指南.md  gamepad-test-client.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gamepad-tests-pro/src/: App.tsx  index.css
gamepad-tests-pro/src/components/: ButtonTester.tsx  CompatibilityInfo.tsx  ConnectionStabilityTester.tsx  ConnectionStatus.tsx  DeadzoneTester.tsx  GyroscopeTester.tsx  Header.tsx  JoystickTester.tsx  LatencyTester.tsx  Rankings.tsx  SampleRateControl.tsx  SaveTestButton.tsx  TestingTabs.tsx  VibrationScenePlayer.tsx  VibrationTester.tsx
gamepad-tests-pro/src/contexts/: LanguageContext.tsx
gamepad-tests-pro/src/hooks/: useGamepad.ts
gamepad-tests-pro/src/lib/: i18n.ts  utils.ts
gamepad-tests-pro/src/pages/: Index.tsx
gamepad-tests-pro/supabase/: config.toml
gamepad-tests-pro/supabase/migrations/: 20251226112621_82ebf505-1331-49c5-82f0-0a4cf5a628fc.sql  20251227031404_24bb886a-500d-4d84-9c66-a5df32596cef.sql  (+3 more)
(+1 files in other folders)
